Refs #140518 - Fix header align with content on small screen.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -1255,6 +1255,13 @@ div#page-document {
   }
 }
 
+@media screen and (max-width: 770px) and (min-width: 600px) {
+  div.header-content {
+    position: relative;
+    left: 15px;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .ui.basic.segment.content-area .ui.container#page-document {
     padding: 0px 5px 0px 5px !important;
